<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robograsp_vision_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for RoboGrasp-Vision: launch files, system-level configuration, and demo scripts.</description>
  <maintainer email="user@example.com">hajimi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robograsp_interfaces</depend>
  <depend>robograsp_vision_perception</depend>
  <depend>robograsp_vision_grasp</depend>
  <depend>robograsp_vision_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
